--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<h1> Srushti Raut's Portfolio</h1>
+<!DOCTYPE html>
+<html lang="en">
+    
+<head>
+    <meta charset="UTF-8">
+    <title>"My Resume"</title>
+</head>
+<body>
+    <header><h1>Srushti Raut's Portfolio</h1></header>
+    <h2>Srushti Suryakant Raut</h2>
+    <br>
+    <img src="./image/img.jpg" height="200" width="200"><br>
+    Hii,this is srushti, studying engineering ,know advance coding skill with graphics.
+    <hr>
+    <h2>Education</h2>
+    <br>
+    10th at TJP,Vairag.
+    <br>
+    Completed diploma in computer engineering at MIT-WPU,pune.
+    <br>
+    Currently pursuing degree at VU College.
+    <hr>
+    <h2>Work Experince</h2>
+    <br>
+    Completed internship at-<b>Corestance Technology Pvt.Ltd</b>
+    <img src="./image/certificate.png.png" height="300">
+    <hr>
+    <h2>Skills </h2>
+    <ol>
+        <li>Showcase Java applications, demonstrating problem-solving and efficiency.</li>
+        <li>Highlight websites designed using HTML/CSS with emphasis on user experience.</li>
+        <li> Include C++ projects showcasing algorithmic proficiency and application development.</li>
+        <li>Familiarity with version control (Git) and software development methodologies.</li>
+    </ol>
+    <hr>
+    <a href="./contact.html"><b>contact me</b></a>
+    <hr>
+    <footer><b>SrushtiRaut</b> © 2024 Srushti Raut. All rights reserved.</footer>
+
+
+</body>
+</html>
