--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<h1>Contact</h1>
+<hr>
+<b>Number:</b>3452671899
+<br>
+<b>Address:</b>Mayur kunj, <br>kothrud,pune.
+<br>
+<b>email:</b>srushtiraut31@gmail.com 
+
+
+
